fixing spacing

--- a/css/home.css
+++ b/css/home.css
@@ -21,6 +21,6 @@ body {
 }
 
 #bogchat p{
-    transform: translate(70%,550%);
+    transform: translate(70%,600%);
     margin-bottom: 0;
 }
